# bench-async-ucx

./: .gitmodules  Cargo.toml  README.md  tag_tx_rx_async_ucx_bench.json
bench-async-ucx/: Cargo.toml
bench-async-ucx/src/: lib.rs
bench-c/: meson.build  mpi.c
bench-c-ucx/: compile_commands.json  meson.build  mpi.c  tag.c
bench-c-ucx/.cache/clangd/index/: mpi.c.0A1D0F265595FCED.idx
bench-c/.cache/clangd/index/: mpi.c.0A1D0F265595FCED.idx
bench-sync-ucx/: Cargo.toml
bench-sync-ucx/src/: lib.rs  main.rs
jobs/: gen_bench_script.rb  template.sh.erb
scripts/: debug.sh  gen_bench_script.rb  gen_tests.rb  iops_tensor.rb  mpirun.sh  run-1-1-256.sh  run-1-32-8.sh  run-32-1-256.sh  run-32-8-256.sh  run.sh  template.sh.erb  test.sh
src/: lib.rs
