[package]
name = "bench-async-ucx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.21"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "time"] }
async-ucx = { path = "async-ucx" }
mpi = { path = "rsmpi" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }