[package]
name = "bench-async-ucx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "time", "fs", "sync", "rt"] }
async-ucx = { path = "async-ucx", features = ["am", "event"]}
mpi = { path = "rsmpi" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.75"
network-interface = "1.0.2"
regex = "1.9.3"
metrics = "0.21.1"
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
async-trait = "0.1.73"
futures = "0.3.28"
